--- a/index.html
+++ b/index.html
@@ -49,14 +49,18 @@
       French translation of http://tilemill.com/manual.html
     </div>
 
-    <p>Le but du projet est de faire la traduction de la documentation de TileMiIl</p><h2>Dependencies</h2>
+    <p>Le but du projet est de faire la traduction de la documentation de TileMill en français</p><h2>Dependencies</h2>
 <p>Online JQuery</p>
 <h2>Install</h2>
-<p>Rien à installer. Ouvrez showdown_view/tilemill-fr.html dans votre navigateur</p>
+<p>Rien à installer. Ouvrez showdown_view/tilemill-fr.html dans votre navigateur ou regarder directement <a href="showdown_view/tilemill-fr.html">la documentation en ligne</a>
+</p>
 <h2>Authors</h2>
-<p>ThomasG (thomas_gratier@yahoo.fr)<br/><br/>      </p>
+<p>ThomasG (thomas_gratier@yahoo.fr)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p> (thomas_gratier@yahoo.fr)<br/>      </p>
+<p> (thomas_gratier@yahoo.fr)
+<br/>      </p>
 
 
     <h2>Download</h2>
@@ -76,6 +80,7 @@
 
   </div>
 
-  
+
 </body>
 </html>
+
