Change title in tilemill-fr.html

--- a/showdown_view/tilemill-fr.html
+++ b/showdown_view/tilemill-fr.html
@@ -69,7 +69,7 @@
       }
 
   </style>
-	<title>Showdown - Markdown in Javascript</title>
+	<title>Manuel de TileMill en français</title>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
 	<script type="text/javascript" src="showdown.js"></script>
 		<script type="text/javascript" src="script.js"></script>
