Correct style again

--- a/showdown_view/tilemill-fr.html
+++ b/showdown_view/tilemill-fr.html
@@ -43,6 +43,11 @@
           padding: 0 !important;
       }
 
+      pre, code {
+          font: 12px/20px 'Andale Mono',Monaco,Consolas,'Lucida Console',monospace;
+          background: none repeat scroll 0 0 #F8F8F8;
+      }
+
       div.column-75 {
           background-color: #F8F8F8;
           padding: 0.7em;
